frontend/src/app/components/hall-viewing/hall-viewing.component.scss
@import '../../../colors';

.full-width {
  width: 98vw;
  position: relative;
  left: 50%;
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

.full-height {
  hight: 100vh;
  position: relative;
  top: 50%;
  bottom: 50%;
  margin-top: -50vh;
  margin-bottom: -50vh;
}

.no-padding {
  padding-left: 0px;
  padding-right: 0px;
}

.key-bg {
  height: calc(100vh - 50px);
}

.disabled{
  opacity: 1;
}

.hall-plan {
  position: relative;
  height: 880px;
  width: 1000px;
  background-color: $light-gray;
}

.stage {
  position: absolute;
  height: 20px;
  width: 500px;
  top: 20px;
  left: 170px;
  background-color: $medium-gray;
  border-radius: 5px;
}

.btn-seat {
  background-color: $medium-gray;
  border-radius: 5px;
}

.btn-seat:hover,
.btn-seat:focus,
.btn-seat:active{
  background-color: darken($medium-gray, 10);
}

.btn-key {
  background-color: $main-blue;
  border-radius: 5px;
}

.btn-key:hover,
.btn-key:focus,
.btn-key:active{
  background-color: darken($main-blue, 10);
}

.btn-choice {
  background-color: $main-orange;
  border-radius: 5px;
}

.btn-choice:hover,
.btn-choice:focus,
.btn-choice:active{
  background-color: darken($main-orange, 10);
}

.btn-reserved {
  background-color: transparent;
  border-radius: 5px;
  color: $medium-gray;
  font-size: x-large;
  padding: 0px;
  text-align: center;
  vertical-align: top;
}

.btn-reserved:hover,
.btn-reserved:focus,
.btn-reserved:active{
  background-color: darken(transparent, 10);
}

.btn-sector {
  background-color: $main-blue;
  width: 50px;
  height: 50px;
  border-radius: 5px;
  text-align: center;
  color: white;
  font-size: inherit;
}

.btn-sector:hover,
.btn-sector:focus,
.btn-sector:active{
  background-color: darken($main-blue, 10);
}

.btn-sector-zero {
  background-color: $medium-gray;
  width: 50px;
  height: 50px;
  border-radius: 5px;
  text-align: center;
  color: $dark-gray;
  font-size: inherit;
}

.btn-sector-zero:hover,
.btn-sector-zero:focus,
.btn-sector-zero:active{
  background-color: darken($medium-gray, 10);
}

.btn-sector-zero-selected{
  background-color: $main-orange;
  width: 50px;
  height: 50px;
  border-radius: 5px;
  text-align: center;
  color: white;
  font-size: inherit;
}

.btn-sector-zero-selected:hover,
.btn-sector-zero-selected:focus,
.btn-sector-zero-selected:active{
  background-color: darken($main-orange, 10);
}

.row-padding {
  padding-top: 10px;
  padding-bottom: 10px;
}


.btn-seat-key {
  background-color: $medium-gray;
  font-weight: bolder;
  text-align: center !important;
  border-radius: 5px;
  width:40px;
  height: 40px;
}

.btn-key-key {
  background-color: $main-blue;
  border-radius: 5px;
  width: 40px;
  height: 40px;
}

.btn-choice-key {
  background-color: $main-orange;
  border-radius: 5px;
  width: 40px;
  height: 40px;
}

.btn-reserved-key {
  background-color: transparent;
  border-radius: 5px;
  color: $medium-gray;
  font-size: 36px;
  padding: 0px;
  text-align: center;
  width: 40px;
  height: 40px;
}

.my-auto{
  margin-top: auto;
  margin-bottom: auto;
}

.btn-cat{
  width: 4px !important;
  padding: 0px;
  margin-left: 820px;
  border-radius: 0px;
  position: absolute;
}

.sector-pop{
  width: inherit;
  height: 300px;
  border-radius: 5px;
  margin: 15px;
}

h4{
  color: white;
  font-size: 18px;
  margin: 0px;
}

.zero{
  color: $dark-gray;
}

